--- a/2018.html
+++ b/2018.html
@@ -14,461 +14,331 @@
 
 <body>
 <div class="catalog">
-  <a href="index.html"><img src="2019/xenerrdotcom.jpg" class="xenerr-logo"></a>
+  <a href="index.html"><img src="2019/xenerr-logo.jpg" class="xenerr-logo"></a>
 </div>
 
 <div class="grid">
 
-
   <img src="2019/2018-11.jpg" class="month-title">
 
   <div class="photoo stockholm">
-    <img src="photos/2018/165.jpg">
-  </div>
-
-  <div class="photoo stockholm">
-    <img src="photos/2018/164.jpg">
-  </div>
-
-  <div class="photoo stockholm">
-    <img src="photos/2018/163.jpg">
-  </div>
-
-  <div class="photoo stockholm">
-    <img src="photos/2018/162.jpg">
-  </div>
-
-
-  <img src="2019/2019-10.jpg" class="month-title">
-
-  <div class="photoo brittany">
-    <img src="photos/2018/161.jpg">
-  </div>
-
-  <div class="photoo brittany">
-    <img src="photos/2018/160.jpg">
-  </div>
-
-  <div class="photoo brittany">
-    <img src="photos/2018/159.jpg">
-  </div>
-
-  <div class="photoo brittany">
-    <img src="photos/2018/158.jpg">
-  </div>
-
-  <div class="photoo brittany">
-    <img src="photos/2018/157.jpg">
-  </div>
-
-  <img src="2019/2019-09.jpg" class="month-title">
-
-  <div class="photoo stockholm">
-    <img src="photos/2018/156.jpg">
-  </div>
-
-  <div class="photoo stockholm">
-    <img src="photos/2018/155.jpg">
-  </div>
-
-  <div class="photoo paris">
-    <img src="photos/2018/154.jpg">
-  </div>
-
-  <img src="2019/2019-08.jpg" class="month-title">
-
-  <div class="photoo capri">
-    <img src="photos/2018/153.jpg">
-  </div>
-
-  <div class="photoo capri">
-    <img src="photos/2018/152.jpg">
-  </div>
-
-  <div class="photoo capri">
-    <img src="photos/2018/151-2.jpg">
-  </div>
-
-  <div class="photoo capri">
-    <img src="photos/2018/151.jpg">
-  </div>
-
-  <div class="photoo capri">
-    <img src="photos/2018/150.jpg">
-  </div>
-
-  <div class="photoo capri">
-    <img src="photos/2018/149.jpg">
-  </div>
-
-  <div class="photoo capri">
-    <img src="photos/2018/148.jpg">
-  </div>
-
-  <div class="photoo capri">
-    <img src="photos/2018/147.jpg">
-  </div>
-
-  <div class="photoo pompei">
-    <img src="photos/2018/146.jpg">
-  </div>
-
-  <div class="photoo pompei">
-    <img src="photos/2018/145.jpg">
-  </div>
-
-  <div class="photoo pompei">
-    <img src="photos/2018/144.jpg">
-  </div>
-
-  <div class="photoo naples">
-    <img src="photos/2018/143.jpg">
-  </div>
-
-  <div class="photoo naples">
-    <img src="photos/2018/142.jpg">
-  </div>
-
-  <div class="photoo naples">
-    <img src="photos/2018/141.jpg">
-  </div>
-
-  <div class="photoo naples">
-    <img src="photos/2018/140.jpg">
-  </div>
-
-  <div class="photoo naples">
-    <img src="photos/2018/139.jpg">
-  </div>
-
-  <div class="photoo naples">
-    <img src="photos/2018/138.jpg">
-  </div>
-
-  <div class="photoo naples">
-    <img src="photos/2018/137.jpg">
-  </div>
-
-  <div class="photoo naples">
-    <img src="photos/2018/136.jpg">
-  </div>
-
-  <div class="photoo naples">
-    <img src="photos/2018/135.jpg">
-  </div>
-
-  <div class="photoo naples">
-    <img src="photos/2018/134.jpg">
-  </div>
-
-  <div class="photoo kungsleden">
     <img src="photos/2018/133.jpg">
   </div>
 
-  <div class="photoo kungsleden">
+  <div class="photoo stockholm">
+    <img src="photos/2018/134.jpg">
+  </div>
+
+  <img src="2019/2018-10.jpg" class="month-title">
+
+
+  <div class="photoo moscow">
     <img src="photos/2018/132.jpg">
   </div>
 
-  <div class="photoo kungsleden">
+  <div class="photoo moscow">
     <img src="photos/2018/131.jpg">
   </div>
 
-  <div class="photoo kungsleden">
+  <div class="photoo moscow">
     <img src="photos/2018/130.jpg">
   </div>
 
-  <div class="photoo kungsleden">
+  <div class="photoo moscow">
     <img src="photos/2018/129.jpg">
   </div>
 
-  <div class="photoo kungsleden">
+  <div class="photoo moscow">
     <img src="photos/2018/128.jpg">
   </div>
 
-  <div class="photoo kungsleden">
+  <div class="photoo moscow">
     <img src="photos/2018/126.jpg">
   </div>
 
-  <div class="photoo kungsleden">
+  <div class="photoo moscow">
     <img src="photos/2018/125.jpg">
   </div>
 
-  <div class="photoo kungsleden">
+  <div class="photoo moscow">
     <img src="photos/2018/124.jpg">
   </div>
 
-  <div class="photoo kungsleden">
+  <div class="photoo moscow">
     <img src="photos/2018/123.jpg">
   </div>
 
-  <div class="photoo kungsleden">
-    <img src="photos/2018/122.jpg">
-  </div>
+  <img src="2019/2018-09.jpg" class="month-title">
 
-  <div class="photoo kungsleden">
-    <img src="photos/2018/121.jpg">
-  </div>
-
-  <div class="photoo kungsleden">
-    <img src="photos/2018/119.jpg">
-  </div>
-
-  <div class="photoo kungsleden">
-    <img src="photos/2018/118.jpg">
-  </div>
-
-  <div class="photoo kungsleden">
-    <img src="photos/2018/117.jpg">
-  </div>
-
-  <div class="photoo kungsleden">
-    <img src="photos/2018/116.jpg">
-  </div>
-
-  <div class="photoo kungsleden">
+  <div class="photoo stockholm">
     <img src="photos/2018/115.jpg">
   </div>
 
-  <div class="photoo kungsleden">
+  <div class="photoo stockholm">
     <img src="photos/2018/114.jpg">
   </div>
 
-  <div class="photoo kungsleden">
+  <div class="photoo stockholm">
     <img src="photos/2018/113.jpg">
   </div>
 
-  <div class="photoo kungsleden">
+  <div class="photoo stockholm">
     <img src="photos/2018/112.jpg">
   </div>
 
-  <div class="photoo kungsleden">
+  <div class="photoo stockholm">
     <img src="photos/2018/111.jpg">
   </div>
 
-  <div class="photoo kungsleden">
+  <div class="photoo stockholm">
     <img src="photos/2018/110.jpg">
   </div>
 
-  <div class="photoo kungsleden">
+  <div class="photoo stockholm">
     <img src="photos/2018/109.jpg">
   </div>
 
-  <div class="photoo kungsleden">
+  <div class="photoo stockholm">
     <img src="photos/2018/108.jpg">
   </div>
 
-  <div class="photoo kungsleden">
+  <div class="photoo stockholm">
     <img src="photos/2018/106.jpg">
   </div>
 
-  <div class="photoo kungsleden">
+  <div class="photoo stockholm">
     <img src="photos/2018/105.jpg">
   </div>
 
-  <div class="photoo kungsleden">
+  
+  <div class="photoo grandcanyon">
+    <img src="photos/2018/117.jpg">
+  </div>
+
+  <div class="photoo grandcanyon">
+    <img src="photos/2018/118.jpg">
+  </div>
+
+  <div class="photoo grandcanyon">
     <img src="photos/2018/104.jpg">
   </div>
 
-  <div class="photoo kungsleden">
+  <div class="photoo grandcanyon">
     <img src="photos/2018/102.jpg">
   </div>
 
-  <div class="photoo kungsleden">
+  <div class="photoo grandcanyon">
+    <img src="photos/2018/101-2.jpg">
+  </div>
+
+  <div class="photoo grandcanyon">
     <img src="photos/2018/101.jpg">
   </div>
 
-  <div class="photoo stockholm">
+  <div class="photoo grandcanyon">
     <img src="photos/2018/100.jpg">
   </div> 
 
-  <img src="2019/2019-07.jpg" class="month-title">
-
-  
-  <div class="photoo stockholm">
+  <div class="photoo grandcanyon">
     <img src="photos/2018/99.jpg">
   </div> 
 
-  <div class="photoo stockholm">
-    <img src="photos/2018/95.jpg">
-  </div> 
-
-  <div class="photoo stockholm">
-    <img src="photos/2018/94.jpg">
-  </div> 
-
-  <div class="photoo gotland">
+  <div class="photoo grandcanyon">
     <img src="photos/2018/98.jpg">
   </div> 
 
-  <div class="photoo gotland">
+  <div class="photoo grandcanyon">
     <img src="photos/2018/97.jpg">
   </div> 
 
-  <div class="photoo gotland">
+  <div class="photoo grandcanyon">
     <img src="photos/2018/96.jpg">
   </div> 
 
-  <div class="photoo stockholm">
+  <div class="photoo grandcanyon">
+    <img src="photos/2018/95.jpg">
+  </div> 
+
+  <div class="photoo grandcanyon">
+    <img src="photos/2018/94.jpg">
+  </div> 
+
+  <div class="photoo grandcanyon">
+    <img src="photos/2018/98.jpg">
+  </div> 
+
+  <div class="photoo grandcanyon">
+    <img src="photos/2018/97.jpg">
+  </div> 
+
+  <div class="photoo grandcanyon">
+    <img src="photos/2018/96.jpg">
+  </div> 
+
+  <div class="photoo grandcanyon">
     <img src="photos/2018/93.jpg">
   </div> 
 
-  <div class="photoo stockholm">
+  <div class="photoo grandcanyon">
     <img src="photos/2018/92.jpg">
   </div> 
 
-  <div class="photoo stockholm">
+  <div class="photoo grandcanyon">
     <img src="photos/2018/91.jpg">
   </div> 
 
-  <div class="photoo stockholm">
+  <div class="photoo grandcanyon">
     <img src="photos/2018/90.jpg">
   </div> 
 
-  <div class="photoo stockholm">
+  <div class="photoo grandcanyon">
     <img src="photos/2018/89.jpg">
   </div> 
 
-  <div class="photoo stockholm">
+  <div class="photoo grandcanyon">
     <img src="photos/2018/88.jpg">
   </div> 
 
-  <div class="photoo stockholm">
+  <div class="photoo grandcanyon">
     <img src="photos/2018/87.jpg">
   </div> 
 
-  <div class="photoo stockholm">
+  <div class="photoo grandcanyon">
     <img src="photos/2018/86.jpg">
   </div> 
 
-
-
-  <img src="2019/2019-06.jpg" class="month-title">
-
-  <div class="photoo paris">
+  <div class="photoo grandcanyon">
     <img src="photos/2018/85.jpg">
   </div> 
 
-  <div class="photoo paris">
+  <div class="photoo grandcanyon">
     <img src="photos/2018/84.jpg">
   </div> 
 
-  <div class="photoo paris">
-    <img src="photos/2018/74.jpg">
-  </div> 
-
-  <div class="photoo paris">
-    <img src="photos/2018/73.jpg">
-  </div> 
-
-  <div class="photoo paris">
-    <img src="photos/2018/72.jpg">
-  </div> 
-
-  <div class="photoo stockholm">
+  <div class="photoo grandcanyon">
     <img src="photos/2018/83.jpg">
   </div> 
 
-  <div class="photoo stockholm">
+  <img src="2019/2018-08.jpg" class="month-title">
+
+  
+  <div class="photoo newport">
+    <img src="photos/2018/121.jpg">
+  </div> 
+
+  <div class="photoo newport">
+    <img src="photos/2018/120.jpg">
+  </div> 
+
+  <div class="photoo newport">
     <img src="photos/2018/82.jpg">
   </div> 
 
-  <div class="photoo stockholm">
+  <div class="photoo newport">
     <img src="photos/2018/81.jpg">
   </div> 
 
-  <div class="photoo stockholm">
+  <div class="photoo la">
     <img src="photos/2018/80.jpg">
   </div> 
 
-  <div class="photoo stockholm">
+  <div class="photoo la">
     <img src="photos/2018/79.jpg">
   </div> 
 
-  <div class="photoo stockholm">
+  <div class="photoo la">
     <img src="photos/2018/78.jpg">
   </div> 
 
-  <div class="photoo stockholm">
+  <div class="photoo la">
     <img src="photos/2018/77.jpg">
   </div> 
 
-  <div class="photoo stockholm">
+  <div class="photoo la">
     <img src="photos/2018/76.jpg">
   </div> 
 
-  <div class="photoo stockholm">
+  <div class="photoo la">
     <img src="photos/2018/75.jpg">
   </div> 
 
-  <div class="photoo guadalest">
+  <div class="photoo la">
+    <img src="photos/2018/74.jpg">
+  </div> 
+
+  <div class="photoo la">
+    <img src="photos/2018/73.jpg">
+  </div> 
+
+  <div class="photoo la">
+    <img src="photos/2018/72.jpg">
+  </div> 
+
+  <div class="photoo la">
     <img src="photos/2018/71.jpg">
   </div> 
 
-  <div class="photoo xabia">
+  <div class="photoo la">
     <img src="photos/2018/70.jpg">
   </div> 
 
-  <div class="photoo xabia">
+  <div class="photoo la">
     <img src="photos/2018/69.jpg">
   </div> 
 
-  <img src="2019/2019-05.jpg" class="month-title">
-  
-
-  <div class="photoo xabia">
+  <div class="photoo la">
     <img src="photos/2018/68.jpg">
   </div> 
 
-  <div class="photoo alicante">
+  <div class="photoo la">
     <img src="photos/2018/67.jpg">
   </div> 
 
-  <div class="photoo maguelone">
+  <div class="photoo la">
     <img src="photos/2018/66.jpg">
   </div> 
 
-  <div class="photoo maguelone">
+  <div class="photoo la">
     <img src="photos/2018/65.jpg">
   </div> 
 
-  <div class="photoo maguelone">
+  <div class="photoo la">
     <img src="photos/2018/64.jpg">
   </div> 
 
-  <div class="photoo maguelone">
+  <div class="photoo la">
     <img src="photos/2018/63.jpg">
   </div> 
 
-  <div class="photoo montpellier">
+  <div class="photoo la">
     <img src="photos/2018/62.jpg">
   </div> 
 
-  <div class="photoo saintguilhemledesert">
+  <div class="photoo la">
     <img src="photos/2018/61.jpg">
   </div> 
 
-  <div class="photoo saintguilhemledesert">
+  <div class="photoo la">
     <img src="photos/2018/60.jpg">
   </div> 
 
-  <div class="photoo saintguilhemledesert">
+  <div class="photoo la">
     <img src="photos/2018/59.jpg">
   </div> 
 
-  <div class="photoo picsaintloup">
+  <img src="2019/2018-07.jpg" class="month-title">
+
+  <div class="photoo stockholm">
     <img src="photos/2018/58.jpg">
   </div> 
 
-  <div class="photoo picsaintloup">
+  <div class="photoo stockholm">
     <img src="photos/2018/57.jpg">
   </div> 
 
-  <div class="photoo picsaintloup">
+  <div class="photoo stockholm">
     <img src="photos/2018/56.jpg">
   </div> 
-
-
-  <img src="2019/2019-04.jpg" class="month-title">
 
   <div class="photoo stockholm">
     <img src="photos/2018/55.jpg">
@@ -482,134 +352,120 @@
     <img src="photos/2018/53.jpg">
   </div> 
 
-  <div class="photoo budapest">
+  <div class="photoo stockholm">
     <img src="photos/2018/52.jpg">
   </div> 
 
-  <div class="photoo budapest">
+  <div class="photoo stockholm">
     <img src="photos/2018/51.jpg">
   </div> 
 
-  <div class="photoo budapest">
+  <div class="photoo stockholm">
     <img src="photos/2018/50.jpg">
   </div> 
 
-  <div class="photoo budapest">
+  <div class="photoo stockholm">
     <img src="photos/2018/49.jpg">
   </div> 
 
-  <div class="photoo budapest">
+  <div class="photoo stockholm">
     <img src="photos/2018/48.jpg">
   </div> 
 
-  <div class="photoo budapest">
+  <div class="photoo stockholm">
     <img src="photos/2018/47.jpg">
   </div> 
 
-  <div class="photoo budapest">
+  <div class="photoo stockholm">
     <img src="photos/2018/46.jpg">
   </div> 
 
-  <div class="photoo budapest">
+  <div class="photoo stockholm">
     <img src="photos/2018/45.jpg">
   </div> 
 
-  <div class="photoo budapest">
+  <div class="photoo stockholm">
     <img src="photos/2018/44.jpg">
   </div> 
 
-  <div class="photoo budapest">
+  <div class="photoo stockholm">
     <img src="photos/2018/42.jpg">
   </div> 
 
-  <div class="photoo budapest">
+  <div class="photoo stockholm">
     <img src="photos/2018/41.jpg">
   </div> 
 
-  <div class="photoo budapest">
+  <div class="photoo stockholm">
     <img src="photos/2018/40.jpg">
   </div> 
 
-  <div class="photoo budapest">
+  <div class="photoo stockholm">
     <img src="photos/2018/39.jpg">
   </div> 
 
-  <div class="photoo budapest">
-    <img src="photos/2018/38.jpg">
-  </div> 
-
-  <img src="2019/2019-03.jpg" class="month-title">
-
-  
   <div class="photoo stockholm">
+    <img src="photos/2018/38.jpg">
+  </div>
+  
+  <div class="photoo paris">
     <img src="photos/2018/37.jpg">
   </div> 
 
-  <div class="photoo stockholm">
+  <div class="photoo paris">
     <img src="photos/2018/36.jpg">
   </div> 
 
-  <div class="photoo stockholm">
+  <div class="photoo paris">
     <img src="photos/2018/35.jpg">
   </div> 
 
-  <div class="photoo palmsprings">
+  <div class="photoo paris">
     <img src="photos/2018/34.jpg">
   </div> 
 
-  <div class="photoo palmsprings">
+  <div class="photoo paris">
     <img src="photos/2018/33.jpg">
   </div> 
 
-  <div class="photoo palmsprings">
+  <img src="2019/2018-06.jpg" class="month-title">
+
+
+  <div class="photoo stockholm">
     <img src="photos/2018/32.jpg">
   </div> 
 
-  <div class="photoo palmsprings">
+  <div class="photoo stockholm">
     <img src="photos/2018/31.jpg">
   </div> 
 
-  <div class="photoo palmsprings">
+  <div class="photoo stockholm">
     <img src="photos/2018/30.jpg">
   </div> 
 
-  <div class="photoo palmsprings">
-    <img src="photos/2018/29.jpg">
-  </div> 
+  <img src="2019/2018-03.jpg" class="month-title">
 
-  <div class="photoo palmsprings">
-    <img src="photos/2018/28.jpg">
-  </div> 
-
-  <div class="photoo palmsprings">
-    <img src="photos/2018/27.jpg">
-  </div> 
-
-  <div class="photoo palmsprings">
-    <img src="photos/2018/26.jpg">
-  </div> 
-
-  <div class="photoo palmsprings">
+  <div class="photoo austin">
     <img src="photos/2018/25.jpg">
   </div> 
 
-  <div class="photoo la">
+  <div class="photoo austin">
     <img src="photos/2018/24.jpg">
   </div> 
 
-  <div class="photoo la">
+  <div class="photoo austin">
     <img src="photos/2018/23.jpg">
   </div> 
 
-  <div class="photoo la">
+  <div class="photoo austin">
     <img src="photos/2018/22.jpg">
   </div> 
 
-  <div class="photoo la">
+  <div class="photoo austin">
     <img src="photos/2018/21.jpg">
   </div> 
 
-  <div class="photoo la">
+  <div class="photoo austin">
     <img src="photos/2018/20.jpg">
   </div> 
 
