--- a/2015.html
+++ b/2015.html
@@ -893,7 +893,7 @@
   <a href="2017.html"><img src="2019/years/years_2017.jpg"></a>
   <a href="2016.html"><img src="2019/years/years_2016.jpg"></a>
   <img src="2019/years/years_2015-a.jpg">
-  <img src="2019/years/years_2014.jpg">
+  <a href="2014.html"><img src="2019/years/years_2014.jpg"></a>
   <img src="2019/years/years_2013.jpg">
   <img src="2019/years/years_2012.jpg">
   <img src="2019/years/years_2011.jpg">
