adding all years

--- a/index.html
+++ b/index.html
@@ -697,13 +697,13 @@
   <a href="2016.html"><img src="2019/years/years_2016.jpg"></a>
   <a href="2015.html"><img src="2019/years/years_2015.jpg"></a>
   <a href="2014.html"><img src="2019/years/years_2014.jpg"></a>
-  <img src="2019/years/years_2013.jpg">
-  <img src="2019/years/years_2012.jpg">
-  <img src="2019/years/years_2011.jpg">
-  <img src="2019/years/years_2010.jpg">
-  <img src="2019/years/years_2009.jpg">
-  <img src="2019/years/years_2008.jpg">
-  <img src="2019/years/years_2007.jpg">
+  <a href="2013.html"><img src="2019/years/years_2013.jpg"></a>
+  <a href="2012.html"><img src="2019/years/years_2012.jpg"></a>
+  <a href="2011.html"><img src="2019/years/years_2011.jpg"></a>
+  <a href="2010.html"><img src="2019/years/years_2010.jpg"></a>
+  <a href="2009.html"><img src="2019/years/years_2009.jpg"></a>
+  <a href="2008.html"><img src="2019/years/years_2008.jpg"></a>
+  <a href="2007.html"><img src="2019/years/years_2007.jpg"></a>
  </div>
 
 <script>
