--- a/2007.html
+++ b/2007.html
@@ -35,487 +35,487 @@
 
 <div class="grid">
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/120.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/121.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/119.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/118.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/117.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/116.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/115.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/114.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/113.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/112.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/111.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/110.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/109.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/108.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/107.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/106.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/105.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/104.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/103.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/102.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/101.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo">
     <img src="photos/2007/100.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo">
     <img src="photos/2007/99.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo">
     <img src="photos/2007/98.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/97.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/96.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/95.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/94.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/93.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo paris">
     <img src="photos/2007/92.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo paris">
     <img src="photos/2007/91.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo paris">
     <img src="photos/2007/90.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo paris">
     <img src="photos/2007/89.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo paris">
     <img src="photos/2007/88.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo paris">
     <img src="photos/2007/87.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo paris">
     <img src="photos/2007/86.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo paris">
     <img src="photos/2007/85.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo paris">
     <img src="photos/2007/84.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo paris">
     <img src="photos/2007/83.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo paris">
     <img src="photos/2007/82.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo paris">
     <img src="photos/2007/81.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo paris">
     <img src="photos/2007/80.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo paris">
     <img src="photos/2007/79.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/78.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/77.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/76.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/75.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/74.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/73.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/72.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/71.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/70.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/69.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/68.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/67.jpg">
   </div>
   
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/66.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/65.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/64.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/63.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/62.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/61.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/60.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/59.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/58.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/57.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/56.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/55.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/54.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/53.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/52.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/51.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/50.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/49.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/48.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/47.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/46.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/45.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/44.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/43.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/42.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/41.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/40.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/39.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/38.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/37.jpg">
   </div>
   
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/36.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/35.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/34.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/33.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/32.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/31.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/30.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/29.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/28.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/27.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/26.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <<img src="photos/2007/25.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/24.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/23.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/22.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/21.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/20.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/19.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/18.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/17.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/16.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/15.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/14.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2007/13.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo london">
     <img src="photos/2007/12.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo london">
     <img src="photos/2007/11.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo london">
     <img src="photos/2007/10.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo london">
     <img src="photos/2007/09.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo london">
     <img src="photos/2007/08.jpg">
   </div>
 
-  <div class="photoo">
+  <div class="photoo london">
     <img src="photos/2007/07.jpg">
   </div>
 
-  <div class="photoo">
+  <div class="photoo london">
     <img src="photos/2007/06.jpg">
   </div>
 
-  <div class="photoo">
+  <div class="photoo london">
     <img src="photos/2007/05.jpg">
   </div>
 
-  <div class="photoo">
+  <div class="photoo london">
     <img src="photos/2007/04.jpg">
   </div>
 
-  <div class="photoo">
+  <div class="photoo london">
     <img src="photos/2007/03.jpg">
   </div>
 
-  <div class="photoo">
+  <div class="photoo london">
     <img src="photos/2007/02.jpg">
   </div>
 
-  <div class="photoo">
+  <div class="photoo london">
     <img src="photos/2007/01.jpg">
   </div>
 
