--- a/2008.html
+++ b/2008.html
@@ -35,606 +35,606 @@
 
 <div class="grid">
 
-  <div class="photoo ">
+  <div class="photoo london">
     <img src="photos/2008/151.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo london">
     <img src="photos/2008/150.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo london">
     <img src="photos/2008/149.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo london">
     <img src="photos/2008/148.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo london">
     <img src="photos/2008/147.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo london">
     <img src="photos/2008/146.jpg">
   </div> 
-  <div class="photoo ">
+  <div class="photoo london">
     <img src="photos/2008/145.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo london">
     <img src="photos/2008/144.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo london">
     <img src="photos/2008/143.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo london">
     <img src="photos/2008/142.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo london">
     <img src="photos/2008/141.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo london">
     <img src="photos/2008/140.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo london">
     <img src="photos/2008/139.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo london">
     <img src="photos/2008/138.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo london">
     <img src="photos/2008/137.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo london">
     <img src="photos/2008/136.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo london">
     <img src="photos/2008/135.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo london">
     <img src="photos/2008/134.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo london">
     <img src="photos/2008/133.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo london">
     <img src="photos/2008/132.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo london">
     <img src="photos/2008/131.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo london">
     <img src="photos/2008/130.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo london">
     <img src="photos/2008/129.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/128.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/127.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/126.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/125.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/124.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/123.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/122.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/121.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/120.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/119.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/118.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/117.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/116.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/115.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/114.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/113.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/112.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/111.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/110.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/109.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/108.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/107.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/106.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/105.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/104.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/103.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/102.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/101.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/100.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/99.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/98.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/97.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/96.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/95.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/94.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/93.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/92.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/91.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/90.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/89.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/88.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/87.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/86.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/85.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/84.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/83.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/82.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/81.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/80.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/79.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/78.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/77.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/76.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/75.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/74.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/73.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/72.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/71.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/70.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/69.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/68.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/67.jpg">
   </div>
   
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/66.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/65.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/64.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/63.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/62.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/61.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/60.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo">
     <img src="photos/2008/59.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo">
     <img src="photos/2008/58.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/57.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/56.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/55.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/54.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/53.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/52.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/51.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/50.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/49.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/48.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/47.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/46.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/45.jpg">
   </div> 
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/44.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/43.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/42.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/41.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/40.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/39.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/38.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/37.jpg">
   </div>
   
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/36.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/35.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/34.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/33.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/32.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/31.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/30.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/29.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/28.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/27.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/26.jpg">
   </div>
 
-  <div class="photoo ">
-    <<img src="photos/2008/25.jpg">
+  <div class="photoo budapest">
+    <img src="photos/2008/25.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/24.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/23.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/22.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/21.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/20.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/19.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/18.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/17.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/16.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/15.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/14.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/13.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/12.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/11.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/10.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/09.jpg">
   </div>
 
-  <div class="photoo ">
+  <div class="photoo budapest">
     <img src="photos/2008/08.jpg">
   </div>
 
-  <div class="photoo">
+  <div class="photoo budapest">
     <img src="photos/2008/07.jpg">
   </div>
 
-  <div class="photoo">
+  <div class="photoo budapest">
     <img src="photos/2008/06.jpg">
   </div>
 
-  <div class="photoo">
+  <div class="photoo budapest">
     <img src="photos/2008/05.jpg">
   </div>
 
-  <div class="photoo">
+  <div class="photoo budapest">
     <img src="photos/2008/04.jpg">
   </div>
 
-  <div class="photoo">
+  <div class="photoo berlin">
     <img src="photos/2008/03.jpg">
   </div>
 
-  <div class="photoo">
+  <div class="photoo berlin">
     <img src="photos/2008/02.jpg">
   </div>
 
-  <div class="photoo">
+  <div class="photoo berlin">
     <img src="photos/2008/01.jpg">
   </div>
 
