--- a/index.html
+++ b/index.html
@@ -36,7 +36,30 @@
 <div class="grid">
 
 
+
   <img src="2019/2019-11.jpg" class="month-title">
+
+
+
+  <div class="photoo paris">
+    <img src="photos/2019/170.jpg">
+  </div>
+
+  <div class="photoo paris">
+    <img src="photos/2019/169.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2019/168.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2019/167.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2019/166.jpg">
+  </div>
 
   <div class="photoo stockholm">
     <img src="photos/2019/165.jpg">
