--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
   </div>
 
   <div class="photoo paris">
+    <img src="photos/2019/171.jpg">
+  </div>
+
+  <div class="photoo paris">
     <img src="photos/2019/169.jpg">
   </div>
 
