--- a/index.html
+++ b/index.html
@@ -35,6 +35,35 @@
 
 <div class="grid">
 
+    <img src="2019/2019-12.jpg" class="month-title">
+  <div class="photoo paris">
+    <img src="photos/2019/171.jpg">
+  </div>
+
+  <div class="photoo paris">
+    <img src="photos/2019/172.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2019/166.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2019/167.jpg">
+  </div>
+
+  <div class="photoo paris">
+    <img src="photos/2019/168.jpg">
+  </div>
+
+  <div class="photoo paris">
+    <img src="photos/2019/169.jpg">
+  </div>
+
+  <div class="photoo paris">
+    <img src="photos/2019/170.jpg">
+  </div>
+
 
 
   <img src="2019/2019-11.jpg" class="month-title">
