--- a/2007.html
+++ b/2007.html
@@ -8,7 +8,7 @@
 <meta name="author" content="xenia ayunova">
 <meta name="keywords" content="front-end development, photography, web development">
 <link rel="icon" href="favicon.ico" type="image/x-icon">
-<meta property="og:image" content="2019/xenerrdotcom.jpg"/>
+<meta property="og:image" content="xenerrdotcom.png"/>
 </head>
 
 
